--- a/sass/admin-bar.scss
+++ b/sass/admin-bar.scss
@@ -181,7 +181,7 @@
 		background:transparent!important;
 	}
 	#wpadminbar .quicklinks .menupop ul li:hover{
-		background: $login_button_text!important;
+		background: $lightest_main_bg !important;
 	}
 	#wpadminbar .menupop .menupop > .ab-item {
 		background: url('./images/admin-bar-sprite.png') 100% -23px no-repeat!important
